Publish persistance (with Javadoc) to local Maven repository